--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="bg-gray-500 [&::-webkit-scrollbar]:hidden">
+  <body
+    class="font-bme-fontFamily bg-gray-100 tracking-wider [&::-webkit-scrollbar]:hidden"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
