--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body
-    class="font-bme-fontFamily bg-gray-100 tracking-wider [&::-webkit-scrollbar]:hidden"
+    class="bg-gray-100 font-bme-fontFamily tracking-wider [&::-webkit-scrollbar]:hidden"
   >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
